fix header full viewport and blog overflow

--- a/src/styles/components/blog.scss
+++ b/src/styles/components/blog.scss
@@ -57,6 +57,7 @@
 
         @include tablet {
             scroll-snap-type: none;
+            overflow-x: visible;
         }
     }
 
